--- a/src/app/components/person-modal/person-modal.component.html
+++ b/src/app/components/person-modal/person-modal.component.html
@@ -40,7 +40,7 @@
     <ion-item>
       <ion-label>Género</ion-label>
       <ion-select formControlName="gender" placeholder="Selecciona un género">
-        <ion-select-option *ngFor="let gen of generos" [value]="gen">{{ gen }}</ion-select-option>
+        <ion-select-option *ngFor="let gen of genders" [value]="gen">{{ gen }}</ion-select-option>
       </ion-select>
     </ion-item>
     <ion-text color="danger" *ngIf="gender?.invalid && (gender?.dirty || gender?.touched)">
@@ -48,6 +48,6 @@
     </ion-text>
 
     <!-- Botón de Envío -->
-    <ion-button expand="full" type="submit" [disabled]="personaForm.invalid">Registrar</ion-button>
+    <ion-button expand="full" type="submit" [disabled]="formGroup.invalid">Registrar</ion-button>
   </form>
 </ion-content>
