--- a/src/app/components/person-modal/person-modal.component.html
+++ b/src/app/components/person-modal/person-modal.component.html
@@ -54,6 +54,9 @@
     <ion-text color="danger" *ngIf="gender?.invalid && (gender?.dirty || gender?.touched)">
       <p *ngIf="gender?.errors?.['required']">El género es obligatorio.</p>
     </ion-text>
+    
+    <!-- Grupo -->
+    <app-group-selectable></app-group-selectable>
 
     <!-- Botón de Envío -->
     <ion-button expand="full" type="submit" [disabled]="!formGroup.invalid || !formGroup.dirty">Registrar</ion-button>
