--- a/src/app/components/group-selectable/group-selectable.component.html
+++ b/src/app/components/group-selectable/group-selectable.component.html
@@ -25,13 +25,13 @@
     </div>
     <ion-icon name="chevron-down-outline" color="medium"></ion-icon>
   </div>
-  <ion-popover class="selectable-popover" style="width: 100%;" *ngIf="!disabled" trigger="popover-button" #popover (villPresent)="onLoadsGroups()">
+  <ion-popover class="selectable-popover" style="width: 100%;" *ngIf="!disabled" trigger="popover-button" #popover (willPresent)="onLoadGroups()">
     <ng-template>
       <ion-content class="popover-content">
         <ion-list class="list-scrollable">
           <div class="fixed-search">
             <ion-item>
-              <iont-input #search placeholder="Buscar" type="text" (ionInput)="onFilter($event)" debounce="200"></iont-input>
+              <ion-input #search placeholder="Buscar" type="text" (ionInput)="onFilter($event)" debounce="200"></ion-input>
               <ion-button color="medium" slot="end" fill="clear" (click)="clearSearch(search)">
                 <ion-icon slot="icon-only" name="close-outline"></ion-icon>
               </ion-button>
