--- a/src/app/components/person-modal/person-modal.component.html
+++ b/src/app/components/person-modal/person-modal.component.html
@@ -8,8 +8,8 @@
 <ion-content>
   <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
     <ion-item>
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input type="text" formControlName="name"></ion-input>
+      <!--ion-label position="floating"></ion-label-->
+      <ion-input label="Nombre" labelPlacement="stacked" type="text" formControlName="name"></ion-input>
     </ion-item>
     <ion-text color="danger" *ngIf="name?.invalid && (name?.dirty || name?.touched)">
       <p *ngIf="name?.errors?.['required']">El nombre es obligatorio.</p>
@@ -18,8 +18,7 @@
 
     <!-- Apellidos -->
     <ion-item>
-      <ion-label position="floating">Apellidos</ion-label>
-      <ion-input type="text" formControlName="surname"></ion-input>
+      <ion-input label="Apellidos" labelPlacement="stacked" type="text" formControlName="surname"></ion-input>
     </ion-item>
     <ion-text color="danger" *ngIf="surname?.invalid && (surname?.dirty || surname?.touched)">
       <p *ngIf="surname?.errors?.['required']">Los apellidos son obligatorios.</p>
@@ -28,8 +27,7 @@
 
     <!-- Email -->
     <ion-item>
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" formControlName="email"></ion-input>
+      <ion-input label="Email" labelPlacement="stacked" type="email" formControlName="email"></ion-input>
     </ion-item>
     <ion-text color="danger" *ngIf="email?.invalid && (email?.dirty || email?.touched)">
       <p *ngIf="email?.errors?.['required']">El email es obligatorio.</p>
@@ -46,8 +44,7 @@
 
     <!-- Género -->
     <ion-item>
-      <ion-label>Género</ion-label>
-      <ion-select formControlName="gender" placeholder="Selecciona un género">
+      <ion-select label="Género" labelPlacement="stacked" formControlName="gender" placeholder="Selecciona un género">
         <ion-select-option *ngFor="let gen of genders" [value]="gen">{{ gen }}</ion-select-option>
       </ion-select>
     </ion-item>
@@ -56,7 +53,10 @@
     </ion-text>
     
     <!-- Grupo -->
-    <app-group-selectable></app-group-selectable>
+    <ion-item>
+      <ion-label position="stacked">Grupo</ion-label>
+      <app-group-selectable formControlName="groupId"></app-group-selectable>
+    </ion-item>
 
     <!-- Botón de Envío -->
     <ion-button expand="full" type="submit" [disabled]="!formGroup.invalid || !formGroup.dirty">Registrar</ion-button>
