--- a/src/app/pages/people/people.page.html
+++ b/src/app/pages/people/people.page.html
@@ -12,7 +12,7 @@
   </ion-header>
   
   <ion-list>
-    <ion-item *ngFor="let person of people$ | async; let i = index" (click)="openPersonDetail(person, i)">
+    <ion-item *ngFor="let person of people$ | async; let i = index" (click)="openPersonDetail(person, i)" button detail="false">
       <ion-avatar slot="start">
         <img #avatar alt="Silhouette of a person's head" [src]="person.picture!.thumbnail" />
       </ion-avatar>
