--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,4 +10,15 @@
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
   </ion-header>
+  
+  <div class="#container">
+    <form action="">
+      <ion-item>
+        <ion-input label="Email" labelPlacement="stacked" type="email" formControlName="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input label="Password" labelPlacement="stacked" type="text" formControlName="password"></ion-input>
+      </ion-item>
+    </form>
+  </div>
 </ion-content>
