--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>register</ion-title>
+    <ion-title>Crear Cuenta</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,22 +11,58 @@
     </ion-toolbar>
   </ion-header>
   
-  <!--form [formGroup]="userRegister" (ngSubmit)="onSubmit()"-->
-    <ion-item>
-      <ion-input label="Nombre de Usuario" labelPlacement="stacked" type="text" formControlName="username"></ion-input>
-    </ion-item>
-    <ion-text></ion-text>
-    <ion-item>
-      <ion-input label="Email" labelPlacement="stacked" type="email" formControlName="email"></ion-input>
-    </ion-item>
-    <ion-text color="danger" *ngIf="email?.invalid && (email?.dirty || email?.touched)"></ion-text>
-    <ion-item>
-      <ion-input label="Contraseña" labelPlacement="stacked" type="text" formControlName="password"></ion-input>
-    </ion-item>
-    <ion-text></ion-text>
-    <ion-item>
-      <ion-input label="Confirmar Contraseña" labelPlacement="stacked" type="text" formControlName="password"></ion-input>
-    </ion-item>
-    <ion-text></ion-text>
-  <!--/form-->
+  <div class="register-container">
+    <form [formGroup]="userRegister" (ngSubmit)="onSubmit()">
+      <ion-grid>
+        <ion-row>
+          <ion-col style="display: flex" class="ion-justify-content-center">
+            <ion-text>Iniciar Sesión</ion-text>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-grid>
+        <ion-row>
+          <ion-col style="display: flex" class="ion-justify-content-center ion-align-items-center">
+            ¿Ya tienes cuenta? <ion-button style="text-transform: none" (click)="onLogin()" fill="clear">Entra</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-item>
+        <ion-input label="Nombre" labelPlacement="floating" type="text" formControlName="name" required></ion-input>
+      </ion-item>
+      <ion-text color="danger" *ngIf="name?.invalid && (name?.dirty || name?.touched)">
+        <p *ngIf="name?.errors?.['required']">El nombre es obligatorio.</p>
+        <p *ngIf="name?.errors?.['minlength']">El nombre debe tener al menos 2 caracteres.</p>
+      </ion-text>
+      <ion-item>
+        <ion-input label="Apellidos" labelPlacement="floating" type="text" formControlName="surname" required></ion-input>
+      </ion-item>
+      <ion-text color="danger" *ngIf="surname?.invalid && (surname?.dirty || surname?.touched)">
+        <p *ngIf="surname?.errors?.['required']">El/Los apellido/s es/son obligatorio/s.</p>
+        <p *ngIf="surname?.errors?.['minlength']">El/Los apellido/s debe/s tener al menos 2 caracteres.</p>
+      </ion-text>
+      <ion-item>
+        <ion-input label="Email" labelPlacement="floating" type="email" formControlName="email" required></ion-input>
+      </ion-item>
+      <ion-text color="danger" *ngIf="email?.invalid && (email?.dirty || email?.touched)">
+        <p *ngIf="email?.errors?.['required']">Debe introducir un email.</p>
+        <p *ngIf="email?.errors?.['minlength']">Debe introducir un email correcto.</p>
+      </ion-text>
+      <ion-item>
+        <ion-input label="Contraseña" labelPlacement="floating" type="text" formControlName="password" required></ion-input>
+      </ion-item>
+      <ion-text color="danger" *ngIf="password?.invalid && (password?.dirty || password?.touched)">
+        <p *ngIf="password?.errors?.['required']">Al menos 6 carácteres, una letra y un símbolo.</p>
+      </ion-text>
+      <ion-item>
+        <ion-input label="Confirmar Contraseña" labelPlacement="floating" type="text" formControlName="confirmPassword" required></ion-input>
+      </ion-item>
+      <ion-text color="danger" *ngIf="userRegister.errors?.['passwordMismatch']">
+        <p>Las contraseñas no coinciden.</p>
+      </ion-text>
+      <ion-button style="text-transform: none" expand="block" type="submit" [disabled]="userRegister.invalid">
+        Crear Cuenta
+      </ion-button>
+    </form>
+  </div>
 </ion-content>
