--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,30 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu #menu side="start" menuId="mainMenu" contentId="mainContent" [disabled]="!(authSVC.authenticated$|async)">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menú</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item (click)="menu.close()" routerLink="/home" routerDirection="root">Inicio</ion-item>
+        <ion-item (click)="menu.close()" *ngIf="(authSVC.authenticated$|async)" routerLink="/people">Personas</ion-item>
+        <ion-item (click)="menu.close()" *ngIf="(authSVC.authenticated$|async)" routerLink="/groups">Grupos</ion-item>
+        <ion-item (click)="menu.close()" *ngIf="(authSVC.authenticated$|async)" (click)="logout()">Cerrar seasión</ion-item>
+      </ion-list>
+    </ion-content>
+    <ion-footer>
+      <ion-toolbar>
+        <ion-item lines="none">
+          <ion-avatar slot="start">
+            <img src="'https://ionicframework.com/docs/img/demos/avatar.svg'" alt="Avatar">
+          </ion-avatar>
+          <ion-label>
+            <h3>{{ (authSVC.users$|async)?.username }}</h3>
+          </ion-label>
+        </ion-item>
+      </ion-toolbar>
+    </ion-footer>
+  </ion-menu>
+  <ion-router-outlet id="mainContent"></ion-router-outlet>
 </ion-app>
