--- a/src/app/components/person-modal/person-modal.component.html
+++ b/src/app/components/person-modal/person-modal.component.html
@@ -1,42 +1,49 @@
 <ion-header>
   <ion-title>
-    <h1 *ngIf="person">Editar person</h1>
-    <h1 *ngIf="!person">Crear nueva persona</h1>
+    <h1 *ngIf="person">{{'PERSON.EDIT' | translate}}</h1><!--Editar person-->
+    <h1 *ngIf="!person">{{'PERSON.NEW' | translate}}</h1><!--Crear nueva persona-->
   </ion-title>
+  @if (isMobile) {
+    <ion-buttons>
+      <ion-button slot="end">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  }
 </ion-header>
 
 <ion-content>
   <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
     <ion-item>
       <!--ion-label position="floating"></ion-label-->
-      <ion-input label="Nombre" labelPlacement="stacked" type="text" formControlName="name"></ion-input>
+      <ion-input label="'PERSON.NAME' | translate" labelPlacement="stacked" type="text" formControlName="name"></ion-input>
     </ion-item>
     <ion-text color="danger" *ngIf="name?.invalid && (name?.dirty || name?.touched)">
-      <p *ngIf="name?.errors?.['required']">El nombre es obligatorio.</p>
-      <p *ngIf="name?.errors?.['minlength']">El nombre debe tener al menos 2 caracteres.</p>
+      <p *ngIf="name?.errors?.['required']">{{'PERSON.ERRORS.NAME_REQUIRED' | translate}}</p><!--El nombre es obligatorio.-->
+      <p *ngIf="name?.errors?.['minlength']">{{'PERSON.ERRORS.NAME_MIN_LENGTH' | translate}}</p><!--El nombre debe tener al menos 2 caracteres.-->
     </ion-text>
 
     <!-- Apellidos -->
     <ion-item>
-      <ion-input label="Apellidos" labelPlacement="stacked" type="text" formControlName="surname"></ion-input>
+      <ion-input label="'PERSON.SURNAME' | translate" labelPlacement="stacked" type="text" formControlName="surname"></ion-input>
     </ion-item>
     <ion-text color="danger" *ngIf="surname?.invalid && (surname?.dirty || surname?.touched)">
-      <p *ngIf="surname?.errors?.['required']">Los apellidos son obligatorios.</p>
-      <p *ngIf="surname?.errors?.['minlength']">Los apellidos deben tener al menos 2 caracteres.</p>
+      <p *ngIf="surname?.errors?.['required']">{{'PERSON.ERRORS.SURNAME_REQUIRED' | translate}}</p>
+      <p *ngIf="surname?.errors?.['minlength']">{{'PERSON.ERRORS.SURNAME_MIN_LENGTH' | translate}}</p>
     </ion-text>
 
     <!-- Email -->
     <ion-item>
-      <ion-input label="Email" labelPlacement="stacked" type="email" formControlName="email"></ion-input>
+      <ion-input label="'PERSON.EMAIL' | translate" labelPlacement="stacked" type="email" formControlName="email"></ion-input>
     </ion-item>
     <ion-text color="danger" *ngIf="email?.invalid && (email?.dirty || email?.touched)">
-      <p *ngIf="email?.errors?.['required']">El email es obligatorio.</p>
-      <p *ngIf="email?.errors?.['email']">Por favor, introduce un email válido.</p>
+      <p *ngIf="email?.errors?.['required']">{{'PERSON.ERRORS.EMAIL_REQUIRED' | translate}}</p>
+      <p *ngIf="email?.errors?.['email']">{{'PERSON.ERRORS.EMAIL_INVALID' | translate}}</p>
     </ion-text>
 
     <!-- Edad -->
     <ion-item>
-      <ion-input label="Edad" label-placement="stacked" type="text" formControlName="age"></ion-input>
+      <ion-input label="'PERSON.AGE' | translate" label-placement="stacked" type="text" formControlName="age"></ion-input>
     </ion-item>
     <ion-text color="danger" *ngIf="age?.invalid">
       <p *ngIf="age?.errors?.['patern']">La edad debe ser un número positivo.</p>
@@ -44,7 +51,7 @@
 
     <!-- Género -->
     <ion-item>
-      <ion-select label="Género" labelPlacement="stacked" formControlName="gender" placeholder="Selecciona un género">
+      <ion-select label="'PERSON.GENDER' | translate" labelPlacement="stacked" formControlName="gender" placeholder="Selecciona un género">
         <ion-select-option *ngFor="let gen of genders" [value]="gen">{{ gen }}</ion-select-option>
       </ion-select>
     </ion-item>
@@ -54,11 +61,11 @@
     
     <!-- Grupo -->
     <ion-item>
-      <ion-label position="stacked">Grupo</ion-label>
+      <ion-label position="stacked">{{'PERSON.GROUP' | translate}}</ion-label>
       <app-group-selectable formControlName="groupId"></app-group-selectable>
     </ion-item>
 
     <!-- Botón de Envío -->
-    <ion-button expand="full" type="submit" [disabled]="!formGroup.invalid || !formGroup.dirty">Registrar</ion-button>
+    <ion-button expand="full" type="submit" [disabled]="!formGroup.invalid || !formGroup.dirty">{{'PERSON.SUBMIT' | translate}}</ion-button>
   </form>
 </ion-content>
