--- a/src/app/pages/people/people.page.html
+++ b/src/app/pages/people/people.page.html
@@ -3,7 +3,13 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Personas</ion-title>
+    <ion-title>{{ 'PEOPLE.TITLE' | translate }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="onAddPerson()">
+        <ion-icon name="add-outline"></ion-icon>
+        {{ 'PEOPLE.ADD_BUTTON' | translate }}
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -15,33 +21,63 @@
   </ion-header>
   
   <ion-list>
-    <ion-item *ngFor="let person of people$ | async; let i = index" (click)="openPersonDetail(person, i)" button detail="false">
-      <ion-avatar slot="start">
-        <img #avatar alt="Silhouette of a person's head" [src]="person.picture!.thumbnail" />
-      </ion-avatar>
-      <ion-label class="ion-text-nowrap">
-        {{person.name}} {{person.surname}} ({{person.age}} años)
-      </ion-label>
-      <ion-button (click)="$event.stopPropagation()" [id]="'button-delete-'+person.id" slot="end" color="danger" fill="clear">
-        <ion-icon style="font-size: 1.5em;" name="trash-outline"></ion-icon>
-      </ion-button>
-      <ion-alert
+    <ng-container *ngFor="let person of people$ | async; let i = index" (click)="openPersonDetail(person, i)" button detail="false">
+      <ion-item *ngIf="isWeb">
+        <ion-avatar slot="start" #avatar>
+          <img #avatar alt="Silhouette of a person's head" [src]="person.picture!.thumbnail" />
+        </ion-avatar>
+        <ion-label><!-- class="ion-text-nowrap"-->
+          <h2>{{person.name}}</h2>
+          <p>{{person.surname}}</p> ({{person.age}} años)
+        </ion-label>
+        <ion-buttons>
+          <!--ion-button (click)="$event.stopPropagation()" [id]="'button-delete-'+person.id" slot="end" color="danger" fill="clear">
+            <ion-icon style="font-size: 1.5em;" name="trash-outline"></ion-icon>
+          </ion-button-->
+          <ion-button color="primary" (click)="openPersonDetail(person, i)">
+            <ion-icon name="create-online" slot="icon-only"></ion-icon>
+          </ion-button>
+          <ion-button color="danger" (click)="onDeletePerson(person)">
+            <ion-icon name="trash-online" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-item>
+      
+      <!--ion-alert
         [trigger]="'button-delete-'+person.id"
         header="Alert!"
         [buttons]="alertYesNoButtons"
-        (didDismiss)="onDeletePerson($event, person)"
-      ></ion-alert>
-    </ion-item>
+        (didDismiss)="onDeletePerson(person)">
+      </ion-alert-->
+      <ion-item *ngIf="!isWeb">
+        <ion-avatar slot="start" #avatar>
+          <img #avatar alt="Silhouette of a person's head" [src]="person.picture!.thumbnail" />
+        </ion-avatar>
+        <ion-label>
+          <h2>{{person.name}}</h2>
+          <p>{{person.surname}}</p> ({{person.age}} años)
+        </ion-label>
+        <ion-buttons>
+          <ion-button color="primary" (click)="openPersonDetail(person, i)">
+            <ion-icon name="create-online" slot="icon-only"></ion-icon>
+          </ion-button>
+          <ion-button color="danger" (click)="onDeletePerson(person)">
+            <ion-icon name="trash-online" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-item>
+      
+    </ng-container>
   </ion-list>
-  <div #animatedAvatarContainer class="animated-avatar-container" [ngStyle]="{'display':isAnimating?'block':'none'}">
+  <!--div #animatedAvatarContainer class="animated-avatar-container" [ngStyle]="{'display':isAnimating?'block':'none'}">
     <img #animatedAvatar [src]="selectedPerson?.picture?.large" alt="Foto de {{ selectedPerson?.name.first }}">
-  </div>
+  </div-->
   <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+  <!--ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button (click)="onAddPerson()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab-->
 </ion-content>
